[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x16rt_hash"
version = "0.2.0"
description = "Python 3 bindings for X16RT hashing PoW"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Brian Lee"},
    {name = "random.zebra"},
]
maintainers = [
    {name = "The Avian Core Developers"},
]
keywords = ["x16rt", "hash", "veil", "cryptocurrency", "pow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/AvianNetwork/x16rt_hash"
"Bug Tracker" = "https://github.com/AvianNetwork/x16rt_hash/issues"
"Source Code" = "https://github.com/AvianNetwork/x16rt_hash"

[tool.setuptools]
include-package-data = true
